# lazy-static-to-once-cell

./: Cargo.toml
src/: main.rs
